@@ -33,6 +33,7 @@ importFrom(rmarkdown,render)
 importFrom(stats,fft)
 importFrom(tuneR,bind)
 importFrom(tuneR,extractWave)
+importFrom(tuneR,readMP3)
 importFrom(tuneR,readWave)
 importFrom(tuneR,writeWave)
 importFrom(utils,installed.packages)
