@@ -1,7 +1,9 @@
 phonfieldwork 0.0.6 (08.06.2020)
   - add "encoding" arguments to functions for working with TextGrids
   - add "textgrid" argument to the "draw_sound()" function
-  - change subgraphs alignment in "draw_sound()" function
+  - change subgraphs alignment in the "draw_sound()" function including textgrid annotation
+  - add "from" and "to" arguments to the "draw_sound()" function
+  - add mp3 format reading options to the "draw_sound()" function
 
 phonfieldwork 0.0.5 (07.06.2020)
   - add "textgrid_to_df()" function for reading Praat files
